--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 			<version>2.4.5</version>
 		</dependency>
 
+		<!--Apache Commons dependencies -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
